@@ -24,13 +24,20 @@ listen_ipv6=NO
 # Permitir FTP anônimo do Vsftpd Server (desabilitado por padrão)
 anonymous_enable=NO
 #
+# Configuração do suporte ao Modo Passivo dos Clientes do Vsftpd Server e Portas 
+# conexão remota para o envio e recebimentos de arquivos.
+pasv_enable=YES
+pasv_min_port=50000
+pasv_max_port=50100
+#
+# Configuaração do Modo Passivo do Vsftpd Server para suporte o acesso remoto
+# utilizando o Redirecionamento de Porta via NAT (Network Address Translation)
 # EM DESENVOLVIMENTO E TESTES DE ACESSO DO VSFTPd SERVER VIA NAT EM MODO PASSIVO
-# OBSERVAÇÃO: the passive port number calculates to: (192 x 256) + 25 = 49177
-#pasv_enable=YES
 #pasv_addr_resolve=YES
 #pasv_address=WAN_IP_NAT
-#pasv_min_port=50000
-#pasv_max_port=50100
+#
+# Personalização do Banner do Vsftp Server.
+ftpd_banner=Bem-vindo ao Servico de FTP do Bora para Pratica.
 #
 # Permitir que usuários locais façam login no Vsftpd Server
 local_enable=YES
@@ -47,17 +54,14 @@ use_localtime=YES
 # Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
 connect_from_port_20=YES
 #
+# Habilitando o suporte do Syslog no Vsftp Server
+syslog_enable=YES
+#
 # Ativar os registros/logging de uploads/downloads de arquivos/diretórios no Vsftpd Server
 log_ftp_protocol=YES
 xferlog_enable=YES
 xferlog_std_format=YES
 xferlog_file=/var/log/vsftpd.log
-#
-# Habilitando o suporte do Syslog no Vsftp Server
-syslog_enable=YES
-#
-# Personalização do Banner do Vsftp Server.
-ftpd_banner=Bem-vindo ao Servico de FTP do Bora para Pratica.
 #
 # Restrição dos usuários locais a seus diretórios pessoais no Vsftp Server.
 chroot_local_user=YES
