@@ -6,25 +6,26 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 20/01/2022
-# Data de atualização: 20/01/2022
-# Versão: 0.01
+# Data de atualização: 19/04/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Rsyslog v8.x
 #
 # Configuração dos arquivos de Log padrão do Syslog/Rsyslog
-auth,authpriv.*			/var/log/auth.log
-*.*;auth,authpriv.none		-/var/log/syslog
-cron.*				/var/log/cron.log
-#daemon.*			-/var/log/daemon.log
-kern.*				-/var/log/kern.log
-#lpr.*				-/var/log/lpr.log
-mail.*				-/var/log/mail.log
-user.*				-/var/log/user.log
+auth,authpriv.*             /var/log/auth.log
+*.*;auth,authpriv.none      -/var/log/syslog
+cron.*                      /var/log/cron.log
+ftp.*                       /var/log/vsftpd.log
+#daemon.*                   -/var/log/daemon.log
+kern.*                      -/var/log/kern.log
+#lpr.*                      -/var/log/lpr.log
+mail.*                      -/var/log/mail.log
+user.*                      -/var/log/user.log
 #
 # Configuração dos arquivos de Log do envio de Email do Sistema
-#mail.info			-/var/log/mail.info
-#mail.warn			-/var/log/mail.warn
-mail.err			/var/log/mail.err
+#mail.info                  -/var/log/mail.info
+#mail.warn                  -/var/log/mail.warn
+mail.err                    /var/log/mail.err
 #
 # Emergências são enviadas para todos os logados.
 *.emerg				:omusrmsg:*
